testsuite/tests/parsetree/test_ppx.compilers.reference
File "source_jane_street.ml", line 159, characters 12-39:
159 | type t17b : (value & value) non_pointer
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Warning 184 [ignored-kind-modifier]: The kind modifier(s) non_pointer have no effect on the kind value & value.

File "source_jane_street.ml", line 173, characters 2-43:
173 |   ('a : value mod immutable global aliased)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Warning 221 [imprecise-kind-annotation]: The type variable `'a'
was annotated with kind `value mod global immutable'
but was inferred to have kind `value mod everything non_float'.

File "source_jane_street.ml", line 172, characters 6-66:
172 | type ('a : value mod external_ stateless many unyielding non_float) t18 =
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Warning 221 [imprecise-kind-annotation]: The type variable `'a'
was annotated with kind `value non_float mod unyielding many stateless external_'
but was inferred to have kind `value mod everything non_float'.

File "source_jane_street.ml", line 192, characters 0-24:
192 | type t = #(int * float#)
      ^^^^^^^^^^^^^^^^^^^^^^^^
Error: Multiple definition of the type name t.
       Names must be unique in a given structure or signature.
